--- a/SolvingMurderMystery.ipynb
+++ b/SolvingMurderMystery.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -147,13 +147,167 @@
        "2  2017-01-12  smuggling         NaN   Melbourne"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "crime_scene_report.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>City</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-07</td>\n",
+       "      <td>smuggling</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Savannah</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-01-11</td>\n",
+       "      <td>murder</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Springdale</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-01-12</td>\n",
+       "      <td>smuggling</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Melbourne</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-01-13</td>\n",
+       "      <td>assault</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Reading</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-01-14</td>\n",
+       "      <td>blackmail</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Orange</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1223</th>\n",
+       "      <td>2018-04-10</td>\n",
+       "      <td>arson</td>\n",
+       "      <td>its head impatiently, and walked a little quic...</td>\n",
+       "      <td>Santa Ana</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1224</th>\n",
+       "      <td>2018-04-14</td>\n",
+       "      <td>arson</td>\n",
+       "      <td>go down the chimney!’</td>\n",
+       "      <td>San Jose</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1225</th>\n",
+       "      <td>2018-04-17</td>\n",
+       "      <td>arson</td>\n",
+       "      <td>Alice, she went on, ‘What’s your name, child?’</td>\n",
+       "      <td>Clarke County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1226</th>\n",
+       "      <td>2018-04-25</td>\n",
+       "      <td>arson</td>\n",
+       "      <td>simply--“Never imagine yourself not to be othe...</td>\n",
+       "      <td>Louisville</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1227</th>\n",
+       "      <td>2018-04-28</td>\n",
+       "      <td>arson</td>\n",
+       "      <td>remained some time after the rest of it had gone.</td>\n",
+       "      <td>Denton</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1228 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date       Type  \\\n",
+       "0     2017-01-07  smuggling   \n",
+       "1     2017-01-11     murder   \n",
+       "2     2017-01-12  smuggling   \n",
+       "3     2017-01-13    assault   \n",
+       "4     2017-01-14  blackmail   \n",
+       "...          ...        ...   \n",
+       "1223  2018-04-10      arson   \n",
+       "1224  2018-04-14      arson   \n",
+       "1225  2018-04-17      arson   \n",
+       "1226  2018-04-25      arson   \n",
+       "1227  2018-04-28      arson   \n",
+       "\n",
+       "                                            Description           City  \n",
+       "0                                                   NaN       Savannah  \n",
+       "1                                                   NaN     Springdale  \n",
+       "2                                                   NaN      Melbourne  \n",
+       "3                                                   NaN        Reading  \n",
+       "4                                                   NaN         Orange  \n",
+       "...                                                 ...            ...  \n",
+       "1223  its head impatiently, and walked a little quic...      Santa Ana  \n",
+       "1224                              go down the chimney!’       San Jose  \n",
+       "1225     Alice, she went on, ‘What’s your name, child?’  Clarke County  \n",
+       "1226  simply--“Never imagine yourself not to be othe...     Louisville  \n",
+       "1227  remained some time after the rest of it had gone.         Denton  \n",
+       "\n",
+       "[1228 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crime_scene_report"
    ]
   },
   {
@@ -180,6 +334,70 @@
     "\n",
     "\n",
     "### Te entregaron el informe del lugar del crimen, pero de alguna manera lo perdiste. Recordas vagamente que el crimen fue un ​asesinato​ que ocurrió en algún momento el ​15 de enero de 2018​ y que tuvo lugar en ​Pandas City​. **Te recomiendo comenzar por recuperar el informe correspondiente de su respectivo dataframe**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>City</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>781</th>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>murder</td>\n",
+       "      <td>Security footage shows that there were 2 witne...</td>\n",
+       "      <td>Pandas City</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date    Type                                        Description  \\\n",
+       "781  2018-01-15  murder  Security footage shows that there were 2 witne...   \n",
+       "\n",
+       "            City  \n",
+       "781  Pandas City  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crimen = crime_scene_report[(crime_scene_report['Date']== '2018-01-15') &\n",
+    "                            (crime_scene_report['Type']== 'murder') & \n",
+    "                            (crime_scene_report['City']== 'Pandas City')]\n",
+    "crimen\n"
    ]
   },
   {
@@ -225,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
