--- a/SolvingMurderMystery.ipynb
+++ b/SolvingMurderMystery.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "[1228 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -388,24 +388,38 @@
        "781  Pandas City  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crimen = crime_scene_report[(crime_scene_report['Date']== '2018-01-15') &\n",
-    "                            (crime_scene_report['Type']== 'murder') & \n",
-    "                            (crime_scene_report['City']== 'Pandas City')]\n",
+    "crimen = crime_scene_report[(crime_scene_report['Date'] == '2018-01-15') &\n",
+    "                            (crime_scene_report['Type'] == 'murder') & \n",
+    "                            (crime_scene_report['City'] == 'Pandas City')]\n",
     "crimen\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'DataFrame' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Ayma\\Documents\\GitHub\\Pandas-Murder-Mystery\\SolvingMurderMystery.ipynb Celda 14\u001b[0m in \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Ayma/Documents/GitHub/Pandas-Murder-Mystery/SolvingMurderMystery.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m descripcion \u001b[39m=\u001b[39m crime_scene_report(\u001b[39m'\u001b[39;49m\u001b[39mDescription\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'DataFrame' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "descripcion = crime_scene_report('Description')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -443,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4
  },
